--- a/config.json.template
+++ b/config.json.template
@@ -1,16 +1,25 @@
 {
     "circuit": {
-        "domain": "circuitsandbox.net"
+        "domain": "circuitsandbox.net",
+        "client_id": "<your client_id>",
+        "client_secret": "<your client_secret>",
+        "scope": "READ_USER_PROFILE,READ_CONVERSATIONS,WRTIE_CONVERSATIONS"
+    },
+    "app": {
+        "domain": "http://localhost",
+        "port": 7100,
+        "sdkLogLevel": "debug"
     },
     "linkify": [{
-        "name": "Jira",
+        "title": "Jira (ANS, AAC and CRI links)",
+        "id": "jira",
         "search": "(ANS-[0-9]{1,5}|AAC-[0-9]{1,5}|CRI-[0-9]{1,5})",
-        "replace": "https://<jira-server>/browse/$1"
+        "replace": "https://<your jira server>/browse/$1"
     },
     {
-        "name": "Gerrit",
+        "title": "Gerrit (patch number)",
+        "id": "gerrit",
         "search": "([4-6][0-9]{4})",
-        "replace": "https://<gerrit-server>/#/c/$1"
-    }],
-    "sdkLogLevel": "debug"
+        "replace": "https://<your gerrit server>/#/c/$1"
+    }]
 }
