--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.15.2",
-    "circuit": "file:circuit-1.1.7700.tgz",
+    "circuit": "file:circuit.tgz",
     "ejs": "^2.5.2",
     "file-exists": "^2.0.0",
     "jsonfile": "^2.4.0",
