--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "body-parser": "^1.15.2",
     "circuit": "file:circuit.tgz",
     "ejs": "^2.5.2",
+    "express": "^4.14.0",
+    "express-session": "^1.14.1",
     "file-exists": "^2.0.0",
     "jsonfile": "^2.4.0",
     "node-persist": "^2.0.3",
