Rename app.js ot index.js and add npm start

--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "node-linkify",
   "version": "1.0.0",
   "description": "Replace specific text in message via regex. E.g. JIRA titles with an href to that JIRA page",
-  "main": "app.js",
+  "scripts": {
+    "start": "node index.js | bunyan"
+  },
+  "main": "index.js",
   "author": "Roger Urscheler, Unify Inc.",
   "license": "MIT",
   "dependencies": {
